--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
-* {
-  scroll-behavior: smooth;
-  box-sizing: border-box;
+*{
+scroll-behavior: smooth;
+box-sizing: border-box;
 }
 
 .App {
@@ -33,55 +33,66 @@
   color: #61dafb;
 }
 
-.text {
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+.text{
   color: black;
 }
-.po {
-  transform: translate(20%, 1%);
+.po{
+  transform: translate(20%,1%);
   overflow: hidden;
   width: auto;
 }
-.font_ac {
-  font-family: "Afacad", sans-serif;
+.font_ac{
+  font-family: 'Afacad', sans-serif;
 }
-.font_home {
-  font-family: "Nunito", sans-serif;
+.font_home{
+  font-family: 'Nunito', sans-serif;
 }
-.logo_color {
-  background: -webkit-linear-gradient(#7f32cd, #e61e43);
+.logo_color{
+  background: -webkit-linear-gradient( royalblue, #F2007D );
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
-.color_bleu {
-  color: #f2007d;
+.color_bleu{
+  color: #F2007D;
 }
-.color_primary {
-  color: #7f32cd;
+.color_primary{
+  color: #7F32CD;
 }
-.borde_color {
-  border-color: #f2007d;
+.borde_color{
+  border-color:#F2007D ;
 }
-.bg-bg:hover {
-  background-color: #f2007d;
+.bg-bg:hover{
+  background-color: #F2007D;
   color: white;
 }
-.text-byed {
-  color: #f9f8f8;
+.text-byed{
+  color: #F9F8F8 ;
 }
-.bg-byd {
-  background-color: #f9f8f8;
+.bg-byd{
+  background-color: #F9F8F8 ;
 }
-.bg-bgr {
-  background-color: #f2007d;
+.bg-bgr{
+  background-color: #F2007D;
 }
-.cc {
-  background-image: url("./src/components/img/product-04.jpg");
+.cc{
+  background-image: url("/src/components/img/product-04.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
 @media (max-width: 980px) {
-  .text-webkit-right {
-    text-align: -webkit-right;
-  }
+.text-webkit-right{
+  text-align: -webkit-right;
+
 }
+}
+
+
