--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,90 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url(https://db.onlinewebfonts.com/c/d1e13e0fce9a97c8b5d63fb1adb62fca?family=Mallory+MP+Bold+Regular);
+* {
+  scroll-behavior: smooth;
+  box-sizing: border-box;
+}
+
+.App {
+  text-align: center;
+}
+
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.App-link {
+  color: #61dafb;
+}
+
+.text {
+  color: black;
+}
+.po {
+  transform: translate(20%, 1%);
+  overflow: hidden;
+  width: auto;
+}
+.font_ac {
+  font-family: "Afacad", sans-serif;
+}
+.font_home {
+  font-family: "Nunito", sans-serif;
+}
+.logo_color {
+  background: -webkit-linear-gradient( royalblue, #F2007D );
+
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.color_bleu {
+  color: #f2007d;
+}
+.color_primary {
+  color: #7f32cd;
+}
+.borde_color {
+  border-color: #f2007d;
+}
+.bg-bg:hover {
+  background-color: #f2007d;
+  color: white;
+}
+.text-byed {
+  color: #f9f8f8;
+}
+.bg-byd {
+  background-color: #f9f8f8;
+}
+.bg-bgr {
+  background-color: #f2007d;
+}
+
+@media (max-width: 980px) {
+  .text-webkit-right {
+    text-align: -webkit-right;
+  }
+}
+.font-face {
+  font-family: 'Rubik', sans-serif;
+}
